new database items added
